--- a/04/ex01/Makefile
+++ b/04/ex01/Makefile
@@ -6,24 +6,24 @@
 #    By: eala-lah <eala-lah@student.hive.fi>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/10/15 13:33:49 by eala-lah          #+#    #+#              #
-#    Updated: 2025/10/15 13:34:23 by eala-lah         ###   ########.fr        #
+#    Updated: 2025/10/21 16:34:59 by eala-lah         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		= ex01
+NAME		= DeepCopy
+
+SRCS		= main.cpp Animal.cpp Dog.cpp Cat.cpp Brain.cpp
+OBJS		= $(SRCS:.cpp=.o)
 
 CXX		= c++
 CXXFLAGS	= -Wall -Wextra -Werror -std=c++98
 
-SRCS		= main.cpp Brain.cpp
-OBJS		= $(SRCS:.cpp=.o)
-
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
+	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 
-%.o: %.cpp
+%.o: %.cpp Animal.hpp Dog.hpp Cat.hpp Brain.hpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
